# Hyperplay

./: .gitignore  LICENSE  README.md  plan.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/first/: EqualizerActivity.kt  FolderAdapter.kt  FolderPickerActivity.kt  FolderShowActivity.kt  LandingActivity.kt  MainActivity.kt  MetadataUtils.kt  MusicNotificationReceiver.kt  MusicService.kt  PlayerActivity.kt  QueueAdapter.kt  QueueManagementActivity.kt  SearchActivity.kt  SettingsActivity.kt  Song.kt  SongAdapter.kt  SongCache.kt
app/src/main/java/com/example/first/engine/: AudioEngineFactory.kt  DacHelper.kt  IAudioEngine.kt  MediaPlayerEngine.kt  NativeHiResEngine.kt  UsbBulkEngine.kt
app/src/main/res/drawable/: bg_glass_card.xml  bg_hires_badge.xml  bg_hq_badge.xml  bg_info_button.xml  bg_info_capsule.xml  ic_equalizer_sharp.xml  ic_queue_sharp.xml  ic_timer_sharp.xml
app/src/main/res/layout/: activity_equalizer.xml  activity_folder_picker.xml  activity_folder_show.xml  activity_landing.xml  activity_main.xml  activity_player.xml  activity_player_v2.xml  activity_queue_management.xml  activity_search.xml  activity_settings.xml  item_album_header.xml  item_folder.xml  item_folder_picker.xml  item_queue_song.xml  item_song.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml  usb_device_filter.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/native/: build_ffmpeg.sh
